ACIDE service created !

--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -175,6 +175,10 @@ main , .container-fluid , body , html
       height: 20px
   li.active
     border-bottom: 2px solid #2f82ff !important
+.progress.line
+  background-color: rgba(255,255,255,0.3) !important
+  &:before
+    background-color: #ffffff !important
 .close-tab
   color: rgba(255,255,255,0.4) !important
   &:hover
