--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -278,6 +278,14 @@ html {
   border-bottom: 2px solid #2f82ff !important;
 }
 
+.progress.line {
+  background-color: rgba(255, 255, 255, 0.3) !important;
+}
+
+.progress.line:before {
+  background-color: #ffffff !important;
+}
+
 .close-tab {
   color: rgba(255, 255, 255, 0.4) !important;
 }
