webpack configuration completed !

--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -1,3 +1,9 @@
+@import ~jquery.terminal/css/jquery.terminal.min.css
+@import ~simplebar/dist/simplebar.min.css
+@import ~metro4/build/css/metro-all.min.css
+@import ~@fortawesome/fontawesome-free/css/all.min.css
+@import ../../assets/css/contextMenu.min.css
+
 =shadow($property)
   box-shadow: $property
   -moz-box-shadow: $property
