--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -40,6 +40,7 @@
   opacity: 0.5 !important
 main , .container-fluid , body , html
   height: 100%
+  overflow: hidden !important
 .app-bar.thin-menu
   min-height: 30px !important
   position: relative !important
