--- a/assets/css/app.bundle.css
+++ b/assets/css/app.bundle.css
@@ -281,6 +281,7 @@ main, .container-fluid, body, html {
 }
 .progress.line:before {
   background-color: #ffffff !important;
+  border-radius: 4px !important;
 }
 
 .close-tab {
