--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -186,6 +186,7 @@ main , .container-fluid , body , html
   background-color: rgba(255,255,255,0.3) !important
   &:before
     background-color: #ffffff !important
+    border-radius: 4px !important
 .close-tab
   color: rgba(255,255,255,0.4) !important
   &:hover
