--- a/assets/css/app.bundle.css
+++ b/assets/css/app.bundle.css
@@ -276,10 +276,14 @@ main, .container-fluid, body, html {
   border-bottom: 2px solid #2f82ff !important;
 }
 
-.progress.line {
+[data-position=bottom-app-bar] {
+  width: 100px !important;
+}
+
+.progress {
   background-color: rgba(255, 255, 255, 0.3) !important;
 }
-.progress.line:before {
+.progress.line:before, .progress .bar {
   background-color: #ffffff !important;
   border-radius: 4px !important;
 }
