--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -182,6 +182,11 @@ main , .container-fluid , body , html
       height: 20px
   li.active
     border-bottom: 2px solid #2f82ff !important
+.event-badge
+  position: relative !important
+  display: initial !important
+  border-radius: 50px !important
+  border-bottom-right-radius: 0 !important
 [data-position="bottom-app-bar"]
   width: 100px !important
 .progress
