--- a/resources/views/index.pug
+++ b/resources/views/index.pug
@@ -21,6 +21,7 @@ html(lang="fa")
                             ul.d-menu.fg-white(data-role="dropdown")
                                 li: a(href="#!newproject") New Project
                                 li: a(href="#!closeproject") Open a Project
+                                li: a(href="#!closeide") Exit
                         li: a(href="#!") View
                 .grid.ide-content
                     .row.no-gap.h-100
