--- a/assets/css/app.bundle.css
+++ b/assets/css/app.bundle.css
@@ -32,6 +32,14 @@
 /*Context menu css */
 .iw-mIcon,.iw-mOverlay{left:0;position:absolute}.iw-contextMenu{-webkit-box-shadow:1px 1px 2px rgba(0,0,0,.2);-moz-box-shadow:1px 1px 2px rgba(0,0,0,.2);box-shadow:1px 1px 2px rgba(0,0,0,.2);border:1px solid #E6E6E6;display:none;z-index:1000}.iw-cm-menu{background:#F4F4F4;color:#333;margin:0;padding:0}.iw-cm-menu li{list-style:none;padding:3px 20px 3px 30px;border-bottom:1px solid #CCC;cursor:pointer;position:relative}.iw-mOverlay{width:100%;height:100%;top:0;background:#FFF;opacity:.5}.iw-contextMenu li.iw-mDisable{opacity:.3}.iw-mSelected{background-color:#036;color:#F2F2F2}.iw-cm-arrow-right{width:0;height:0;border-top:5px solid transparent;border-bottom:5px solid transparent;border-left:5px solid #333;position:absolute;right:3px;top:50%;margin-top:-3px}.iw-mSelected>.iw-cm-arrow-right{border-left:5px solid #FFF}.iw-mIcon{width:20px;height:20px;top:3px}
 @charset "UTF-8";
+.closed_ide_body {
+  background-color: #172028;
+}
+
+.simplebar-scrollbar::before {
+  background: #8c8c8c !important;
+}
+
 .thin-menu, .directory-structure, .editor-tabs, a {
   cursor: default !important;
   -webkit-touch-callout: none !important;
@@ -376,4 +384,31 @@ li[data-text=""] {
 }
 .terminal-app #terminal-app-bar .terminal-tabs li.active .close-terminal {
   color: rgba(255, 255, 255, 0.4);
+}
+
+/* Editor SASS */
+.ace_scrollbar-inner {
+  cursor: default !important;
+}
+
+.ace_scroller.ace_scroll-left {
+  box-shadow: none !important;
+}
+
+.ace_scrollbar {
+  position: absolute !important;
+}
+.ace_scrollbar.ace_scrollbar-v {
+  width: 26px !important;
+  right: -14px !important;
+}
+.ace_scrollbar.ace_scrollbar-v .simplebar-track.simplebar-horizontal {
+  display: none !important;
+}
+.ace_scrollbar.ace_scrollbar-h {
+  height: 26px !important;
+  bottom: -18px !important;
+}
+.ace_scrollbar.ace_scrollbar-h .simplebar-track.simplebar-vertical {
+  display: none !important;
 }
