--- a/resources/views/windows/close_project.pug
+++ b/resources/views/windows/close_project.pug
@@ -1,7 +1,7 @@
 .row.no-gap.h-100.close_project
     .col-md-4.fg-white.h-100(style="background:#131a20;border-right:1px solid rgba(255, 255, 255, 0.1);overflow-y:auto")
         h6
-            img.mr-1.ml-3(src="assets/img/icons/folder-app.svg")
+            img.mr-1.ml-3(src="assets/img/icons/file.svg")
             = 'File Projects'
         ul.list-style-none.files_list
             li.p-2.mb-1(ng-repeat="f in files_projects" data-slug="{{f.path}}") {{f.name}}
