--- a/assets/css/app.bundle.css
+++ b/assets/css/app.bundle.css
@@ -391,16 +391,18 @@ li[data-text=""] {
   cursor: default !important;
 }
 
+.ace_scroller {
+  right: 0 !important;
+}
 .ace_scroller.ace_scroll-left {
   box-shadow: none !important;
 }
 
-.ace_scrollbar {
-  position: absolute !important;
-}
 .ace_scrollbar.ace_scrollbar-v {
+  margin-right: -14px !important;
+  height: 100% !important;
+  margin-left: auto !important;
   width: 26px !important;
-  right: -14px !important;
 }
 .ace_scrollbar.ace_scrollbar-v .simplebar-track.simplebar-horizontal {
   display: none !important;
@@ -408,6 +410,7 @@ li[data-text=""] {
 .ace_scrollbar.ace_scrollbar-h {
   height: 26px !important;
   bottom: -18px !important;
+  position: absolute !important;
 }
 .ace_scrollbar.ace_scrollbar-h .simplebar-track.simplebar-vertical {
   display: none !important;
