--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -5,6 +5,7 @@
 @import ../../assets/css/contextMenu.min.css
 @import ide_closed
 @import simpleBar
+@import split
 
 =shadow($property)
   box-shadow: $property
@@ -172,6 +173,7 @@ main , .container-fluid , body , html
 .iw-mIcon
   margin-left: 5px !important
 .editor-tabs
+  margin-left: -2px !important
   background-color: #1c2731
   border-left: 1px solid #172028
   li
