--- a/resources/views/index.pug
+++ b/resources/views/index.pug
@@ -25,8 +25,8 @@ html(lang="fa")
                         li: a(href="#!") View
                 .grid.ide-content
                     .row.no-gap.h-100
-                        .cell-md-3.directory-structure.fg-white.h-100
-                        .cell-md-9.h-100
+                        .directory-structure.fg-white.h-100#split1
+                        .h-100#split2
                             .editor-tabs.fg-white.simpleBar
                                 ul.list-style-none.m-0.d-flex
                             .code-editor.w-100: .editor
