--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -164,6 +164,8 @@ main , .container-fluid , body , html
       width: 20px
       margin-bottom: 3px
       height: 20px
+      min-width: 20px
+      min-height: 20px
 .iw-cm-arrow-right
   border-left: 5px solid #ffffff !important
 .iw-cm-menu
