transfering to linux

--- a/resources/views/index.pug
+++ b/resources/views/index.pug
@@ -23,6 +23,10 @@ html(lang="fa")
                                 li: a(href="#!closeproject") Open a Project
                                 li: a(href="#!closeide") Exit
                         li: a(href="#!") View
+                        li
+                            a.dropdown-toggle(href="#!") Help
+                            ul.d-menu.fg-white(data-role="dropdown")
+                                li: a(href="#!checkforupdates") Check for Updates
                 .grid.ide-content
                     .row.no-gap.h-100
                         .directory-structure.fg-white.h-100#split1
